<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="220dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:textSize="18sp"
        android:layout_marginBottom="2dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:text="@string/only_once" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:textSize="18sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:layout_marginBottom="2dp"
        android:text="@string/everyday" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:textSize="18sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:layout_marginBottom="2dp"
        android:text="@string/only_on_workdays" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:textSize="18sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:layout_marginBottom="2dp"
        android:text="@string/only_on_weekends" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:textSize="18sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:text="@string/some_days" />

</LinearLayout>